# Thesis---own

./: .gitignore  Monte Carlo & Markov Chains for Data Simulation.md  Music.py  README.md  README.txt  SyntheticData.py  artists.csv  check_dataset.py  colaborative_filtering.py  config.py  config.yaml  config_music - first test.yaml  config_music - third test.yaml  config_music.yaml  constans.py  data_generator - Backup.py  data_generator.py  main.py  pyproject.toml  simulation_example.ipynb  songs.csv  test.py  test_users.py  user.py  users.csv
data/: artists.csv  songs.csv
data - First test/: songs.csv  streams.csv  train_data_15_weeks.csv  users.csv  users_favorite_artist.csv  users_favorite_genre.csv
data - First test/data/: artists.csv  train_data_100_weeks.csv  train_data_30_weeks.csv  train_data_50_weeks.csv  users_favorite_song.csv
notebooks/: Generate_Training_Data.ipynb  distribution_example.ipynb  ml.ipynb  test.ipynb
resources/: IDEAS.md
tests/: test_dataset.py
